# velocn-video-parse

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.build  Dockerfile.layer  Makefile  build-layer.sh  readme.md  s.yaml  test-env.example.sh  test-oss-event.sh  video-parse.ini
docs/: BUILD_GUIDE.md  COMPILE_FIX_SUMMARY.md  DEBUG_MODE_GUIDE.md  DOCKER_BUILD_GUIDE.md  FEATURE_SUMMARY.md  LAYER_BUILD.md  OSS_EVENT_ANALYSIS.md  OSS_EVENT_HANDLER_COMPARISON.md  OSS_EVENT_PROCESSING_GUIDE.md  OSS_SDK_IMPLEMENTATION.md  TEST_OSS_EVENT.md  advanced_scene_detection.md  api_endpoints.md  architecture.md  changelog-20251206T001846-452a3b6b.md  changelog-20251206T001846-4d376aa3.md  changelog-20251206T001846-bd0c26c4.md  changelog-20251206T001846-c4d10f30.md  changelog-20251207T150111-5751370a.md  configuration.md  docker_image_deployment.md  hardware_acceleration.md  keyframe_extraction_algorithm.md  optimize_readme.md  parameter_optimization.md  web_service.md
lib-video-parse/: .gitignore  Cargo.toml  video-parse.ini.example
lib-video-parse/scripts/: convert.sh  optimize_params.py
lib-video-parse/src/: audio_extractor.rs  config.rs  handler.rs  lib.rs  main.rs  metadata.rs  oss_client.rs  oss_event.rs  processor.rs  scene_detector.rs  video_processor.rs
repos/sync-oss-bucket/: publish.yaml
video-parse/: Cargo.toml  README.md  WEB_SERVICE.md
video-parse/examples/: oss_event_example.json
video-parse/src/: audio_extractor.rs  handler.rs  lib.rs  main.rs  oss_client.rs  oss_event.rs  processor.rs  scene_detector.rs  video_processor.rs
(+6 files in other folders)
