[package]
name = "video-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
# OSS API 手动实现所需的依赖（替代 aliyun-oss-rust-sdk，避免版本兼容性问题）
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
chrono = "0.4"
percent-encoding = "2.3"
# 配置文件解析
configparser = "3.0"
